{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 124,
  "lineage": "753832c4-24b3-fb7b-e6d1-75e415fe586b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.212.155.243",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-11T01:08:50.708-08:00",
            "id": "projects/coding-challenge-370401/regions/us-west1/addresses/address-name",
            "name": "address-name",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "coding-challenge-370401",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/regions/us-west1/addresses/address-name",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/regions/us-west1/forwardingRules/l7-xlb-forwarding-rule"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-11T01:09:03.103-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coding-challenge-370401/global/firewalls/fw-allow-proxies",
            "log_config": [],
            "name": "fw-allow-proxies",
            "network": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/global/networks/mycustomvpc",
            "priority": 1000,
            "project": "coding-challenge-370401",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/global/firewalls/fw-allow-proxies",
            "source_ranges": [
              "10.200.50.128/25"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "load-balanced-backend"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_000"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-11T01:09:03.213-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coding-challenge-370401/global/firewalls/fw-allow-health-check",
            "log_config": [],
            "name": "fw-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/global/networks/mycustomvpc",
            "priority": 1000,
            "project": "coding-challenge-370401",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/global/firewalls/fw-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "load-balanced-backend"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_000"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-12-11T05:23:20.551-08:00",
            "id": "projects/coding-challenge-370401/regions/us-west1/forwardingRules/l7-xlb-forwarding-rule",
            "ip_address": "projects/coding-challenge-370401/regions/us-west1/addresses/address-name",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "l7-xlb-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/global/networks/mycustomvpc",
            "network_tier": "STANDARD",
            "port_range": "80",
            "project": "coding-challenge-370401",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/regions/us-west1/forwardingRules/l7-xlb-forwarding-rule",
            "target": "projects/coding-challenge-370401/regions/us-west1/targetHttpProxies/l7-xlb-proxy"
          },
          "dependencies": [
            "google_compute_address.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_target_http_proxy.default",
            "google_compute_region_url_map.default",
            "module.coding_challengesubnetwork.google_compute_subnetwork.coding_challengesubnetwork",
            "module.coding_challengesubnetwork2.google_compute_subnetwork.coding_challengesubnetwork2",
            "module.vpc.google_compute_network.vpc_000"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/zones/us-west1-a/instanceGroups/l7-xlb-backend-example",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-12-11T05:22:23.501-08:00",
            "enable_cdn": false,
            "fingerprint": "ge7YoixReUk=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/regions/us-west1/healthChecks/l7-xlb-basic-check"
            ],
            "id": "projects/coding-challenge-370401/regions/us-west1/backendServices/l7-xlb-backend-service",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "l7-xlb-backend-service",
            "port_name": "http",
            "project": "coding-challenge-370401",
            "protocol": "HTTP",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/regions/us-west1/backendServices/l7-xlb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_region_health_check.default",
            "module.coding_challengesubnetwork.google_compute_subnetwork.coding_challengesubnetwork",
            "module.vpc.google_compute_network.vpc_000"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-11T05:23:01.121-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/regions/us-west1/backendServices/l7-xlb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "iWg9kaf8dXQ=",
            "host_rule": [],
            "id": "projects/coding-challenge-370401/regions/us-west1/urlMaps/regional-l7-xlb-map",
            "map_id": 5419327043629770586,
            "name": "regional-l7-xlb-map",
            "path_matcher": [],
            "project": "coding-challenge-370401",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/regions/us-west1/urlMaps/regional-l7-xlb-map",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "module.coding_challengesubnetwork.google_compute_subnetwork.coding_challengesubnetwork",
            "module.vpc.google_compute_network.vpc_000"
          ]
        }
      ]
    },
    {
      "module": "module.coding_challengesubnetwork",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "coding_challengesubnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-11T01:09:04.422-08:00",
            "description": "Subnetwork 1",
            "gateway_address": "10.200.50.1",
            "id": "projects/coding-challenge-370401/regions/us-west1/subnetworks/subnet1",
            "ip_cidr_range": "10.200.50.0/25",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/global/networks/mycustomvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coding-challenge-370401",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/regions/us-west1/subnetworks/subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_000"
          ]
        }
      ]
    },
    {
      "module": "module.coding_challengesubnetwork2",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "coding_challengesubnetwork2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-11T03:31:22.990-08:00",
            "description": "Subnetwork 2",
            "gateway_address": "10.200.50.129",
            "id": "projects/coding-challenge-370401/regions/us-west1/subnetworks/proxy-only-subnet",
            "ip_cidr_range": "10.200.50.128/25",
            "name": "proxy-only-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/global/networks/mycustomvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coding-challenge-370401",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "us-west1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/regions/us-west1/subnetworks/proxy-only-subnet"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_000"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_000",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "coding challenge VPC",
            "enable_ula_internal_ipv6": false,
            "id": "projects/coding-challenge-370401/global/networks/mycustomvpc",
            "mtu": 0,
            "name": "mycustomvpc",
            "project": "coding-challenge-370401",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-challenge-370401/global/networks/mycustomvpc"
          }
        }
      ]
    }
  ]
}